[package]
name = "git-introspection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = {version = "0.14.4", features =["vendored-libgit2"]}
rusqlite = { version = "0.27.0", features = ["bundled-full", "vtab"] }

[dev-dependencies]
