[package]
name = "git-introspection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version = "0.14.4", features = ["vendored-libgit2"] }
rusqlite = { version = "0.27.0", features = ["bundled-full", "vtab", "chrono"] }
itertools = "0.10.3"
arrow2 = { version = "0.12.0", features = ["odbc-api", "io_odbc"] }
tui = "0.18"
crossterm = "0.23"
unicode-width = "0.1"
num-traits = "0.2.15"
bitflags = "1.3.2"
num-derive = "0.3.3"
chrono = "0.4.19"

[dev-dependencies]

